# alasa

./: Cargo.toml  build.rs  host.json
HttpTrigger/: function.json
IndexTrigger/: function.json
OpensearchTrigger/: function.json
SetEngineTrigger/: function.json
src/: entry.rs  index.html  main.rs  opensearch.xml
