[package]
name = "alasa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = "0.11.2"
tokio = {version = "1.37.0", features = ["rt", "macros", "rt-multi-thread"] }
warp = "0.3.7"

[build-dependencies]
phf = "0.11.2"
phf_codegen = "0.11.2"